[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"] }
clap = { version = "3.1.8", features = ["derive"] }

[build-dependencies]
lalrpop = {version = "0.19.7", features = ["lexer"] }