[package]
name = "compiler2"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"] }
clap = { version = "3.1.8", features = ["derive"] }
fxhash = "^0"



[build-dependencies]
fxhash = "^0"
serde_json = "1.0"
quote = "1.0.9"
proc-macro2 = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
lalrpop = {version = "0.19.7", features = ["lexer"] }